seaqt/QtScript/gen_qscriptcontext.h

class QScriptContext;
class QScriptEngine;
class QScriptValue;
typedef struct QScriptContext QScriptContext;
typedef struct QScriptEngine QScriptEngine;
typedef struct QScriptValue QScriptValue;
QScriptContext* QScriptContext_parentContext(const QScriptContext* self);
QScriptEngine* QScriptContext_engine(const QScriptContext* self);
int QScriptContext_state(const QScriptContext* self);
QScriptValue* QScriptContext_callee(const QScriptContext* self);
int QScriptContext_argumentCount(const QScriptContext* self);
QScriptValue* QScriptContext_argument(const QScriptContext* self, int index);
QScriptValue* QScriptContext_argumentsObject(const QScriptContext* self);
struct seaqt_array /* of QScriptValue* */  QScriptContext_scopeChain(const QScriptContext* self);
void QScriptContext_pushScope(QScriptContext* self, QScriptValue* object);
QScriptValue* QScriptContext_popScope(QScriptContext* self);
QScriptValue* QScriptContext_returnValue(const QScriptContext* self);
void QScriptContext_setReturnValue(QScriptContext* self, QScriptValue* result);
QScriptValue* QScriptContext_activationObject(const QScriptContext* self);
void QScriptContext_setActivationObject(QScriptContext* self, QScriptValue* activation);
QScriptValue* QScriptContext_thisObject(const QScriptContext* self);
void QScriptContext_setThisObject(QScriptContext* self, QScriptValue* thisObject);
bool QScriptContext_isCalledAsConstructor(const QScriptContext* self);
QScriptValue* QScriptContext_throwValue(QScriptContext* self, QScriptValue* value);
QScriptValue* QScriptContext_throwError(QScriptContext* self, int error, struct seaqt_string text);
QScriptValue* QScriptContext_throwErrorWithText(QScriptContext* self, struct seaqt_string text);
struct seaqt_array /* of struct seaqt_string */  QScriptContext_backtrace(const QScriptContext* self);
struct seaqt_string QScriptContext_toString(const QScriptContext* self);
void QScriptContext_delete(QScriptContext* self);